evo_http_lib/Release/evo_http_lib.log
  
  Microsoft (R) Program Maintenance Utility Version 14.00.24210.0
  Copyright (C) Microsoft Corporation.  All rights reserved.
  
  	C:\eVoAps\SDK\1.2.0\VRXSDK\bin\vrxcc -p -v -shlabs -c -IC:\eVoAps\SDK\1.2.0\VRXSDK\Include -IC:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Include -I..\..\evo_vcs_lib\Include -IC:\eVoAps\ACT2000\1.15.0\\Include C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Source\httplib.c -o C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Output\Evo\Files\Release\httplib.o
  "C:\Program Files\ARM\RVCT\Programs\4.0\436\multi1\win_32-pentium\armcc" -Ono_memcpy --library_interface=aeabi_clib --no_unaligned_access -Ono_tree_sequencing --thumb -c --cpu ARM1136J-S --bi -J"C:\eVoAps\SDK\1.2.0\VRXSDK\include" -o C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Output\Evo\Files\Release\httplib.o -D_SHARED_LIB --apcs=/inter -IC:\eVoAps\SDK\1.2.0\VRXSDK\Include -IC:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Include -I..\..\evo_vcs_lib\Include -IC:\eVoAps\ACT2000\1.15.0\\Include C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Source\httplib.c
  "C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Source\httplib.c", line 492: Warning:  #550-D: variable "result" was set but never used
    	int result = 0;
    	    ^
  "C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Source\httplib.c", line 499: Warning:  #177-D: variable "dataLeft" was declared but never referenced
    	size_t dataLeft = 0;
    	       ^
  "C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Source\httplib.c", line 559: Warning:  #940-D: missing return statement at end of non-void function "_ReceiveChunkedTransfer"
    }
    ^
  "C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Source\httplib.c", line 565: Warning:  #550-D: variable "result" was set but never used
    	int result = 0;
    	    ^
  "C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Source\httplib.c", line 599: Warning:  #223-D: function "SVC_WAIT" declared implicitly
    	SVC_WAIT(1000);
    	^
  "C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Source\httplib.c", line 448: Warning:  #177-D: function "_ExtractResponseProperties" was declared but never referenced
    static void _ExtractResponseProperties(const char* buffer, HttpContext* ctx) {
                ^
  C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Source\httplib.c: 6 warnings, 0 errors
  	C:\eVoAps\SDK\1.2.0\VRXSDK\bin\vrxcc -p -v -shlpic C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Output\Evo\Files\Release\httplib.o C:\eVoAps\ACT2000\1.15.0\\OutPut\RV\Files\Shlib1\Release\act.o ..\..\evo_vcs_lib\Output\Evo\Files\Release\vcslib.o -o C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Output\Evo\Files\Release\httplib.a
  "C:\Program Files\ARM\RVCT\Programs\4.0\436\multi1\win_32-pentium\armar" -r  C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Output\Evo\Files\Release\httplib.a C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Output\Evo\Files\Release\httplib.o C:\eVoAps\ACT2000\1.15.0\\OutPut\RV\Files\Shlib1\Release\act.o ..\..\evo_vcs_lib\Output\Evo\Files\Release\vcslib.o 
  	copy C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Projects\httplib.lid C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Output\Evo\Files\Release\httplib.lid
          1 file(s) copied.
  	cd C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Output\Evo\Files\Release
  	C:\eVoAps\SDK\1.2.0\VRXSDK\bin\vrxlib -p httplib
  VRXLIB: "C:\Program Files\ARM\RVCT\Programs\4.0\436\multi1\win_32-pentium\armlink" command failed - exit code 1
  Reading library description HTTPLIB.LID
  Generating base code file _HTTPLIB.S
  "C:\Program Files\ARM\RVCT\Programs\4.0\436\multi1\win_32-pentium\armasm" --cpu ARM1136J-S --bi --apcs /inter _HTTPLIB.S
  Generating interface file HTTPLIB.S
  "C:\Program Files\ARM\RVCT\Programs\4.0\436\multi1\win_32-pentium\armasm" --cpu ARM1136J-S --bi --apcs /inter HTTPLIB.S
  "C:\Program Files\ARM\RVCT\Programs\4.0\436\multi1\win_32-pentium\armlink" -o HTTPLIB.axf --scatter _liblnk_.sct --keep _verix_header --keep *(.dummy_pdt)  --entry _shlgo_abs --be32 --map --symbols --info veneers --list HTTPLIB.map --verbose --errors HTTPLIB.err _HTTPLIB.o HTTPLIB.a "C:\eVoAps\SDK\1.2.0\VRXSDK\lib\verix11.lib" 
NMAKE : fatal error U1077: 'C:\eVoAps\SDK\1.2.0\VRXSDK\bin\vrxlib.EXE' : return code '0x1'
  Stop.
C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V140\Microsoft.MakeFile.Targets(41,5): error MSB3073: The command "nmake /f C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\..\Projects\Evo\makefile ProjDir=C:\Users\specak\Documents\gitlab\evo_http_lib\evo_http_lib\\.. DEBUG=0" exited with code 2.
